# waveshare_cpp

./: .env  CMakeLists.txt  CONTINUATION_PROMPT.md  NEW_ARCHITECTURE.md  README.md  README_old.md  SESSION_REPORT_2025-10-09.md  a.out  aaaa  aaaa.cpp  aaaa.md  classDiagram.mmd  classDiagram2.mmd  classDiagram3.mmd  classDiagram4.mmd  class_diagra.drawio  demo_auto_chaining  main  main.cpp  pippo.cpp  test_auto_chaining  test_compilation  test_main_equivalent  test_main_equivalent.cpp  test_result_chaining  uncrustify.cfg  visual_comparison  waveshare_fixed_data_packet.mmd  waveshare_variable_data_packet.mmd
.github/: copilot-instructions.md
config/: bridge_config.json  motor_config.json
doc/: CANOPEN_API_REFERENCE.md  PDO_Testing_Guide.md  SYNCHRONIZATION.md
doc/USB-CAN-A/: README.md  canusb.c  makefile
doc/diagrams/: 00_architecture_overview.md  01_frame_system.md  02_io_abstraction.md  03_bridge_system.md  04_canopen_system.md  class_diagram.md  class_diagram.mmd  waveshare_config_packet.md  waveshare_fixed_data_packet.md  waveshare_variable_data_packet.md  waveshare_variable_frame_type.md
include/: base_frame.hpp  checksum_utils.hpp  common.hpp  config_frame.hpp  error.hpp  fixed_frame.hpp  frame_builder.hpp  frame_traits.hpp  protocol.hpp  result.hpp  span_compat.hpp  variable_frame.hpp  waveshare.hpp
include/canopen/: cia402_constants.hpp  cia402_fsm.hpp  cia402_registers.hpp  object_dictionary.hpp  pdo_constants.hpp  pdo_manager.hpp  sdo_client.hpp
include/enums/: error.hpp  protocol.hpp
include/exception/: waveshare_exception.hpp
include/frame/: config_frame.hpp  fixed_frame.hpp  variable_frame.hpp
include/interface/: checksum.hpp  config.hpp  config_validator.hpp  core.hpp  core_validator.hpp  data.hpp  data_validator.hpp  frame_core.hpp  frame_data.hpp  serialization_helpers.hpp  socketcan_helpers.hpp  vartype.hpp
include/interface/validator/: config_validator.hpp  core_validator.hpp  data_validator.hpp
include/io/: can_socket.hpp  real_can_socket.hpp  real_serial_port.hpp  serial_port.hpp
include/pattern/: bridge_config.hpp  frame_builder.hpp  socketcan_bridge.hpp  usb_adapter.hpp
include/template/: frame_traits.hpp  result.hpp
prompts/: 00_quick_start.md  01_architecture_overview.md  02_implementation_guidance.md  03_implementation_code_context.md  04_ros2_integration.md  05_testing_validation.md  06_documentation_deployment.md  07_advanced_features.md  INDEX.md  README.md
scripts/: CMakeLists.txt  can_bus_scanner.cpp  diagnose_can_setup.sh  script_utils.hpp  test_canopen_hardware.cpp  test_dual_adapter_setup.sh  test_servo_communication.cpp  wave_bridge.cpp  wave_reader.cpp  wave_writer.cpp
src/: CMakeLists.txt  bridge_config.cpp  config_frame.cpp  fixed_frame.cpp  real_can_socket.cpp  real_serial_port.cpp  socketcan_bridge.cpp  socketcan_helpers.cpp  usb_adapter.cpp  variable_frame.cpp
src/canopen/: cia402_fsm.cpp  object_dictionary.cpp  pdo_manager.cpp  sdo_client.cpp
test/: ARCHITECTURE.txt  CATCH2_REFERENCE.md  CMakeLists.txt  FIXES_SUMMARY.md  QUICKSTART.txt  README.md  SUMMARY.md  TEST_SUMMARY.md  VARIABLE_FRAME_ISSUES.md  build_and_test.sh  test_bridge_config.cpp  test_config_frame.cpp  test_exceptions.cpp  test_fixed_frame.cpp  test_frame_builder.cpp  test_mock_example.cpp  test_socketcan_bridge.cpp  test_socketcan_bridge_integration.cpp  test_socketcan_bridge_unit.cpp  test_socketcan_helpers.cpp  test_usb_adapter.cpp  test_utils.hpp  test_variable_frame.cpp
test/canopen/: test_cia402_integration.cpp  test_object_dictionary.cpp  test_pdo_integration.cpp  test_pdo_manager.cpp  test_sdo_client.cpp  test_sdo_integration.cpp  test_utils_canopen.hpp
test/mocks/: mock_can_socket.hpp  mock_serial_port.hpp
test/test_utils/: canopen_test_fixture.hpp
